--- a/learning_logs/templates/learning_logs/creating/creation_by_date.html
+++ b/learning_logs/templates/learning_logs/creating/creation_by_date.html
@@ -3,35 +3,30 @@
 
 {% block content %}
 
-<p>Creations by date</p>
 
-<p>
-  <a href="{%url 'learning_logs:new_creation'%}">Add new question reflexion</a>
-</p>
+<div class="card mt-2 mb-3 cold-white">
+  <div class="card-header display-6 soft-blue">Creations List:</div>
+  <div class="card-body">
+  <div class="card-text"><a href="{%url 'learning_logs:new_creation'%}">Add new Creation</a></div>
 
 <ul class='list-group'>
   {% for creation in creations%}
     <li class='list-group-item'>
-      <b>{{creation.title}}</b> {{creation.date_added|date:'M d, Y'}} </p>
+      <b>{{creation.title}}</b> - {{creation.date_added|date:'M d, Y'}} 
+      <small><a href="{%url 'learning_logs:creation_item' creation.pk %}">
+        Open</a></small>
       <p>{{creation.goal}}</p>
-      <p><a href="{%url 'learning_logs:creation_item' creation.pk %}">
-        See Entry</a></p>
     </li>
-
     {% empty %}
-    <li>There are no entries for this topic yet. </li>
+    <li>There are no entries for Creations yet.</li>
+    {% endfor %}
   </ul>
-
-  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to index</a>
+<div class="card-footer">
+<a href="{% url 'learning_logs:creations_by_title' %}" class="card-link">By Title</a>
 <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
-
-</br></br>
-  {% endfor %}
-
-
-
-
-
+</div>
+</div>
+</div>
 
 
 {% endblock content %}
