--- a/learning_logs/templates/learning_logs/creating/creation_by_title.html
+++ b/learning_logs/templates/learning_logs/creating/creation_by_title.html
@@ -2,31 +2,37 @@
 
 {% block content %}
 
-  <p>Question: {{answers.question}} </p>
 
-  <p>Entries </p>
-  <p>
-    <a href="{%url 'learning_logs:new_question'%}">Add new question reflexion</a>
-  </p>
 
-  <ul>
-    {% for answer in answers%}
-      <li>
-        <p>{{answer.question|title}} </p>
-        <p>{{answer.date_added|date:'M d,Y H:i'}} </p>
-        <p>{{answer.text|linebreaks}}</p>
-        <p><a href="{%url 'learning_logs:creation_item' entry.id %}">
-          See Entryy</a></p>
-      </li>
+<div class="card mt-2 mb-3 cold-white">
+  <div class="card-header display-6 soft-blue">Creations by Title:</div>
+  <div class="card-body">
+  <div class="card-text"><a href="{%url 'learning_logs:new_creation'%}">Add new Creation</a></div>
+
+
+  <ul class='list-group'>
+    {% for creation in creations%}
+
+        <li class="list-group-item">
+          <p class="fs-6"><i>{{creation.title|title}}</i> - 
+            <small><a href="{%url 'learning_logs:creation_item' creation.pk %}">
+              Open</a> -
+              <a href="{%url 'learning_logs:edit_creation' creation.pk %}">
+              Edit entry</a></small></p>
+          <p>{{creation.goal|linebreaks}}
+          </p>
+          </li>
 
       {% empty %}
-      <li>There are no entries for this topic yet. </li>
+      <li class="list-group-item">There are no entries for Creations yet.</li>
     </ul>
     {% endfor %}
-
-    <a href="{% url 'learning_logs:creation_by_date' %}" class="card-link">Back to Creations list</a>
+<div class="card-footer">
+    <a href="{% url 'learning_logs:creations_by_date' %}" class="card-link">Back to Creations list</a>
     <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
-    
-    </br></br>
+  
+</div>
+</div>
+</div>
+
 {% endblock content %}
-  </ul>
