--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -59,13 +59,17 @@
                           href="{% url 'learning_logs:index' %}">
                         My Journal</a></li>
                 <li class='nav-item'>
-                    <a class='nav-link t-burnt-yellow {% if request.path|url_section:1 == '/pages/' %}active{% endif %}' 
-                          href="{% url 'pages:index' %}">
+                    <a class='nav-link t-burnt-yellow' 
+                          href="https://theory.crea-therapy.com/">
                         Theory</a></li>
                 <li class='nav-item'>
                   <a class='nav-link t-burnt-yellow {% if request.path|url_section:1 == '/techniques/' %}active{% endif %}' 
                         href="{% url 'techniques_app:index' %}">
                       Techniques</a></li>
+                <li class='nav-item'>
+                  <a class='nav-link t-burnt-yellow {% if request.path|url_section:1 == '/dive/' %}active{% endif %}' 
+                        href="{% url 'dive_app:index' %}">
+                      Dive</a></li>
             </ul><!-- End of links on left side of nvbar -->
             <!-- Account related links-->
             {% if user.is_authenticated %}
