--- a/between_app/templates/between_app/about_texts.html
+++ b/between_app/templates/between_app/about_texts.html
@@ -31,11 +31,11 @@
         <div class="card shadow border-primary border-3 cold-white rounded  h-100">
             <div class="card-body">
                 <h3 class="card-title">Techniques Space</h3>
-                <p class="card-text">To help you record and share your insights in therapy.</p>
+                <p class="card-text">To help you record and share your insights in therapy. <a href="{% url 'techniques_app:index' %}">Visit.</a></p></p>
                 <p class="card-text">
-                    <i class="bi bi-box"></i> <b>Personal repository:</b> for you to keep and change over time.  <a href="{% url 'techniques_app:new_technique' %}">Try.</a></p>
+                    <i class="bi bi-box"></i> <b>Personal repository:</b> for you to keep and change over time.
                     <p class="card-text">
-                        <i class="bi bi-boxes"></i> <b>Public repository:</b> to share and read other people's insights.  <a href="{% url 'techniques_app:components_list' %}">Try.</a></p>
+                        <i class="bi bi-boxes"></i> <b>Public repository:</b> to share and read other people's insights.
                     </div>
                 </div>
             </div>
@@ -44,11 +44,11 @@
                 <div class="card shadow border-primary border-3 cold-white rounded  h-100">
                     <div class="card-body">
                         <h3 class="card-title">Dive</h3>
-                        <p class="card-text">Dive into CreaTherapy approach to grow as a therapist.</p>
+                        <p class="card-text">Dive into CreaTherapy approach to grow as a therapist. <a href="{% url 'dive_app:index' %}">Visit.</a></p></p>
                         <p class="card-text">
-                            <i class="bi bi-brush"></i> <b>Creative prompt:</b> a step by step prompt for a creative process.  <a href="{% url 'dive_app:new_creation' %}">Try.</a></p>
+                            <i class="bi bi-brush"></i> <b>Creative prompt:</b> a step by step prompt for a creative process.
                         <p class="card-text">
-                            <i class="bi bi-shadows"></i> <b>Shadow:</b> prompts to reflect on your triggers in therapy.  <a href="{% url 'dive_app:new_shadow' %}">Try.</a></p>
+                            <i class="bi bi-shadows"></i> <b>Shadow:</b> prompts to reflect on your triggers in therapy.
                     </div>
                 </div>
             </div>
