--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -39,7 +39,7 @@
   </div>
 {% else %}
 <div class="alert alert-secondary display-5 mx-3 mt-3" role="alert">
-    Update your community profile. <a class="alert-link" href="{% url 'accounts:edit_profile' %}">Update here.</a>
+    Become a Diver user <a class="alert-link" href="{% url 'accounts:edit_status' %}"> here.</a>
   </div>
 {% endif %}
 {% endblock extra_body %}
