--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -61,7 +61,7 @@
                 <li class='nav-item'>
                     <a class='nav-link t-burnt-yellow' 
                           href="https://theory.crea-therapy.com/">
-                        Theory</a></li>
+                        Theory <i class="bi bi-box-arrow-in-up-right"></i></a></li>
                 <li class='nav-item'>
                   <a class='nav-link t-burnt-yellow {% if request.path|url_section:1 == '/techniques/' %}active{% endif %}' 
                         href="{% url 'techniques_app:index' %}">
