--- a/techniques_app/templates/techniques_app/delete_technique.html
+++ b/techniques_app/templates/techniques_app/delete_technique.html
@@ -1,6 +1,6 @@
 {% extends 'between_app/_base.html' %}
 
-{% block title %}Saved Techniques {% endblock title %}
+{% block title %}Remove:{{tech}} {% endblock title %}
 {% load django_bootstrap5%}
 
 {%block content%}
@@ -8,8 +8,9 @@
     class="card border-primary mt-3 soft-green"
 >
     <div class="card-body">
-        <h4 class="card-title">Confirm remove from your saved list:</h4>
-        <p>❗ This will erase this technique from your saved list, but it will remain part of the database</p>
+        <h4 class="card-title">Confirm Remove: {{tech}} </h4>
+        <h5><small>Made in: {{tech.date_made}}</small></h5>
+        <p>❗ This will erase this technique from the database and will eliminate it from the saved folder of others.</p>
         <form method='post' action={% url 'techniques_app:delete_technique' tech_pk %}>
             {% csrf_token %}
             {% bootstrap_button button_type='submit' button_class='btn-danger' content='Remove' %}
