--- a/dive_app/templates/dive_app/shadow/shadow_item.html
+++ b/dive_app/templates/dive_app/shadow/shadow_item.html
@@ -1,29 +1,55 @@
 {% extends 'between_app/_base.html' %}
 {% block title%}{{shadows.title}}{%endblock title%}
 
-{% block page_header %}{{shadows.title}}{% endblock page_header%}
 
 {% block content %}
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h2 class="card-title">{{shadows.title}}</h2>
-      <h6 class="card-subtitle mb-2 text-body-secondary">{{shadows.date_added|date}}</h6>
-      <h5 class="card-text">Goal of the exploration:</h5><p> {{shadows.goal}} </P>
-      <h5 class="card-text">My opposite style:</h5><p> {{shadows.text_opposite_style}} </p>
-      <h5 class="card-text">My opposite sexuality:</h5><p> {{shadows.text_opposite_sex}}</p>
-      <h5 class="card-text">My opposite elements:</h5><p> {{shadows.text_opposite_elements}}  </p>
-      <h5 class="card-text">My transference characters:</h5><p> {{shadows.text_transf_characters}}</p>
-      <h5 class="card-text">My passion for cure:</h5><p> {{shadows.text_furor_curandis}}</p>
-      <h5 class="card-text">My trauma history:</h5><p> {{shadows.text_trauma_history}}</p>
-      <h5 class="card-text">My trauma triggers:</h5><p> {{shadows.text_trauma_triggers}}</p>
-      <h5 class="card-text">My care plan:</h5><p> {{shadows.text_care_plan}}</p>
-      <a href="{% url 'dive_app:edit_shadow' shadows.pk %}" class="card-link">Edit</a></br>
+<div class="card mt-3 mb-3 p-3 cold-white">
+
+  <div class="card-header soft-blue display-6">
+{{shadows.title|title}}
+</div>
+
+<div class="card-body">
+
+      <h6 class="card-subtitle mb-2 text-body-secondary">{{shadows.date_added|date}}
+         - <a href="{% url 'dive_app:edit_shadow' shadows.pk %}" class="card-link">Edit</a>
+      </h6>
+
+      <h5 class="card-text ">Goal of the exploration:</h5>
+        <p  class="bg-white rounded border border-primary p-3"> {{shadows.goal}} </P>
+
+      <h5 class="card-text">My opposite style:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_opposite_style}} </p>
+      
+      <h5 class="card-text">My opposite sexuality:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_opposite_sex}}</p>
+      
+      <h5 class="card-text">My opposite elements:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_opposite_elements}}  </p>
+
+      <h5 class="card-text">My transference characters:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_transf_characters}}</p>
+
+      <h5 class="card-text">My passion for cure:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_furor_curandis}}</p>
+
+      <h5 class="card-text">My trauma history:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_trauma_history}}</p>
+
+      <h5 class="card-text">My trauma triggers:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_trauma_triggers}}</p>
+
+      <h5 class="card-text">My care plan:</h5>
+        <p class="bg-white rounded border p-3"> {{shadows.text_care_plan}}</p>
+
+
+
       <a href="{% url 'dive_app:shadows_by_date' %}" class="card-link">Back to shadows</a>
+
       <a href="{% url 'dive_app:index' %}" class="card-link">Back to Journaling</a>
+
     </div>
   </div>
-
-
 
 
 {%endblock content%}
