--- a/dive_app/templates/dive_app/shadow/new_shadow.html
+++ b/dive_app/templates/dive_app/shadow/new_shadow.html
@@ -10,14 +10,15 @@ Shadow Entry
 
 <div class="card cold-white mt-3 mb-3">
   <div class="card-header soft-blue">
-  <div class="card-title display-6">Shadow Reflections</div>
+  <div class="card-title display-6">
+    <i class="bi bi-shadows"></i><i class="bi bi-shadows"></i> Shadow Reflections</div>
 </div>
   <div class="card-body">
 <p class="card-title">This prompt helps you to think about areas outside your awareness. This prompts are not easy and may be triggering.
   Their aim is to be unconfortable and to help you go a bit further in your self knoledge.
 </p>
- <p>Please, do not push yourself, and do not explore things you don't feel you cannot handle.</p>
-<p class="card-title border-bottom mb-4">Take a moment to reflect on them.</p>
+ <p>Please, do not push yourself, and do not explore things you don't feel you cannot handle. You can leave them blank and come back to them later.</p>
+<p class="card-title border-bottom mb-4">Take a moment to reflect on each.</p>
 
 <h5><i class="bi bi-shadows"></i> Shadow Dive:</h5>
 {% if user.is_authenticated %}
@@ -25,7 +26,7 @@ Shadow Entry
   <form action="{% url 'dive_app:new_shadow' %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
-    {% bootstrap_button button_type='submit' content='New Shadow Journal' %}
+    {% bootstrap_button button_type='submit' content='Submit new Shadow' %}
   </form>
 {% else %}
 <div class="alert alert-success" role="alert">
