--- a/dive_app/templates/dive_app/shadow/shadow_by_title.html
+++ b/dive_app/templates/dive_app/shadow/shadow_by_title.html
@@ -2,31 +2,28 @@
 
 {% block content %}
 
-  <p>Question: {{answers.question}} </p>
-
-  <p>Entries </p>
-  <p>
-    <a href="{%url 'dive_app:new_question'%}">Add new question reflexion</a>
-  </p>
-
-  <ul>
+<div class="card mt-3 mb-3 p-3 cold-white">
+  <div class="card-header soft-blue display-6"><i class="bi bi-shadows"></i> 
+  Shadow list (by title):
+  </div>
+  <div class="card-body"><small>
+    <a href="{%url 'dive_app:new_shadow'%}" 
+    class="card-link">New Shadow</a>
+    <a href="{%url 'dive_app:shadows_by_date'%}"
+    class="card-link">By Date</a></small>
+  
+  <ul class="list-group mb-2 mt-2">
     {% for answer in answers%}
-      <li>
-        <p>{{answer.question|title}} </p>
-        <p>{{answer.date_added|date:'M d,Y H:i'}} </p>
-        <p>{{answer.text|linebreaks}}</p>
-        <p><a href="{%url 'dive_app:edit_entry' entry.id %}">
-          Edit entry</a></p>
-      </li>
-
+    <li class="list-group-item"><a href="{%url 'dive_app:shadow_item' answer.pk %}">
+      {{answer.title|title}}</a> <small>- {{answer.date_added|date:'M d,Y H:i'}}</small>
+    </li>
       {% empty %}
       <li>There are no entries for this topic yet. </li>
+      {% endfor %}
     </ul>
-    {% endfor %}
 
-  <a href="{% url 'dive_app:shadow_by_date' %}" class="card-link">Back to Shadow list</a>
+  <a href="{% url 'dive_app:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
   <a href="{% url 'dive_app:index' %}" class="card-link">Back to Journaling</a>
 
-</br></br>
+  </div> </div>
 {% endblock content %}
-  </ul>
